<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
        <capability name="collection view cell content view" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cellId1" id="q7i-3C-EaH" customClass="SliderSignupCellCollectionViewCell" customModule="Cinemtiyo" customModuleProvider="target">
            <rect key="frame" x="0.0" y="0.0" width="798" height="503"/>
            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
            <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="caG-Cf-Ieh">
                <rect key="frame" x="0.0" y="0.0" width="798" height="503"/>
                <autoresizingMask key="autoresizingMask"/>
                <subviews>
                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="4xO-Y0-c3P">
                        <rect key="frame" x="20" y="22.5" width="758" height="458"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="User Registeration" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aV0-DZ-JWF">
                                <rect key="frame" x="0.0" y="0.0" width="758" height="23"/>
                                <fontDescription key="fontDescription" type="italicSystem" pointSize="19"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7s5-75-vwm">
                                <rect key="frame" x="0.0" y="33" width="758" height="180"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="180" id="Ey7-rF-lWs"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3qR-7m-uax">
                                <rect key="frame" x="0.0" y="223" width="758" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="QjW-Rk-DBo"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fVR-G6-De8">
                                <rect key="frame" x="0.0" y="273" width="758" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="wMT-pg-1cP"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5jY-DZ-YuT">
                                <rect key="frame" x="0.0" y="323" width="758" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="uAS-GP-xHY"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" secureTextEntry="YES"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ipz-Ki-B4t">
                                <rect key="frame" x="0.0" y="373" width="758" height="45"/>
                                <color key="backgroundColor" red="0.57919406890000003" green="0.1280144453" blue="0.57268613580000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="45" id="fjX-aT-dzn"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                <state key="normal" title="Create an Account">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="signupBtnPressed:" destination="q7i-3C-EaH" eventType="touchUpInside" id="5bh-mj-R3k"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zm3-FZ-CML">
                                <rect key="frame" x="0.0" y="428" width="758" height="30"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                <state key="normal" title="Already have an account ">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="alreadyHaveAccount" destination="q7i-3C-EaH" eventType="touchUpInside" id="i1w-Xy-H7A"/>
                                </connections>
                            </button>
                        </subviews>
                    </stackView>
                </subviews>
                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                <constraints>
                    <constraint firstItem="4xO-Y0-c3P" firstAttribute="centerY" secondItem="caG-Cf-Ieh" secondAttribute="centerY" id="25h-o6-HCZ"/>
                    <constraint firstItem="4xO-Y0-c3P" firstAttribute="leading" secondItem="caG-Cf-Ieh" secondAttribute="leading" constant="20" id="bt4-SP-uxr"/>
                    <constraint firstAttribute="trailing" secondItem="4xO-Y0-c3P" secondAttribute="trailing" constant="20" id="rJY-H2-tZs"/>
                </constraints>
            </collectionViewCellContentView>
            <size key="customSize" width="798" height="503"/>
            <connections>
                <outlet property="emailTextField" destination="fVR-G6-De8" id="1C2-5Q-j0A"/>
                <outlet property="imagePickerButton" destination="7s5-75-vwm" id="6gL-yr-o04"/>
                <outlet property="passwordTextField" destination="5jY-DZ-YuT" id="h0G-dm-deu"/>
                <outlet property="singupButton" destination="Ipz-Ki-B4t" id="jxp-OO-uZl"/>
                <outlet property="usernameTextField" destination="3qR-7m-uax" id="IOi-gj-h2H"/>
            </connections>
            <point key="canvasLocation" x="710.14492753623199" y="215.29017857142856"/>
        </collectionViewCell>
    </objects>
</document>
