...
        let pred = NSPredicate(format:"SELF MATCHES %@", regex)
        return pred.evaluate(with: email)
    }
    
    func showAlertController(title: String, message: String) {
        let alert = UIAlertController(title: title, message: message, preferredStyle: .alert)
        let action = UIAlertAction(title: "OK", style: .default, handler: nil)
        alert.addAction(action)
        self.window?.rootViewController?.present(alert, animated: true, completion: nil)
    }
    
    func registerationChecks(){
        let missingChecksResults = missingChecks(username: usernameTextField.text ?? "", email: emailTextField.text ?? "", password: passwordTextField.text ?? "")
        if(missingChecksResults == true){
            showAlertController(title: "Missing Details Error", message: "Missing details are entered into the system")
            return
        }else if(isValidEmail(email: emailTextField.text ?? "") == false){
            showAlertController(title: "Invalid Email Error", message: "The entered email donot conforms to valid email pattern")
            return
        }else if(checkShortPassword(password: passwordTextField.text ?? "") == true){
            showAlertController(title: "Weak Password Error", message: "The password length is very short")
...
